@@ -103,6 +103,11 @@ class _TestReader(object):
 
         assert_equal(l, self.n_frames)
 
+    def test_raises_StopIteration(self):
+        self.reader[-1]
+
+        assert_raises(StopIteration, next, self.reader)
+
 
 class _Multi(_TestReader):
     n_frames = 10
@@ -220,7 +225,7 @@ class _Single(_TestReader):
 
 class TestSingleFrameReader(_Single):
     def test_next(self):
-        assert_raises(IOError, self.reader.next)
+        assert_raises(StopIteration, self.reader.next)
 
     # Getitem tests
     # only 0 & -1 should work
@@ -264,3 +269,4 @@ class TestSingleFrameReader(_Single):
 
     def test_read_frame(self):
         assert_raises(IndexError, self.reader._read_frame, 1)
+
